--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
+  },
+  "overrides": {
+  "jsonpath": "^1.1.1",
+  "node-forge": "^1.3.1"
   }
 }
